tests/samples/invalid/invalid_escape_unicode.pn
fn foo()
{
	var x = "Is \u{59356bff} a valid escape?";
}
